# medassist

./: .gitignore  README.md  implementation_plan.md  main.py  package.json  pyproject.toml  render.yaml  vercel.json
api/: index.py
backend/: .env.example  cleanup_duplicates.py  create_db.py  database.py  email_service.py  main.py  migrate_db.py  models.py  requirements.txt  schemas.py  seed.py  sms_service.py
backend/routes/: __init__.py  admin.py  appointments.py  chat.py  patient_services.py  patients.py  payments.py  slots.py
backend/services/: payment_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/chat/: AdminDashboards.tsx  ChatInput.tsx  ConsentModal.tsx  FormBlock.tsx
frontend/src/components/layout/: ContextPanel.tsx  PatientSidebar.tsx
frontend/src/hooks/: useChatbot.ts
frontend/src/pages/: Admin.tsx  Index.tsx
frontend/src/services/: api.ts
frontend/src/types/: chat.ts
src/services/: api.ts
